--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ addons:
     packages:
       - oracle-java8-installer # Updates JDK 8 to the latest available.
 
+after_success:
+- bash <(curl -s https://codecov.io/bash)
