--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ test {
 jacocoTestReport {
     reports {
         xml.enabled true
-        html.enabled true
+        xml.destination "${buildDir}/jacoco_report.xml"
+        html.enabled false
     }
 }
 
