--- a/build.gradle
+++ b/build.gradle
@@ -18,17 +18,15 @@ project.ext {
 
 dependencies {
     compile "com.google.code.gson:gson:2.8.0"
-    //compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.beust:jcommander:1.60'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile 'com.tngtech.jgiven:jgiven-junit:0.14.1'
+    //testCompile 'com.tngtech.jgiven:jgiven-junit:0.14.1'
     testCompile 'info.cukes:cucumber-java:' + cucumberVersion
     testCompile 'info.cukes:cucumber-junit:' + cucumberVersion
     //compile 'com.squareup.retrofit2:retrofit-mock:see.latest.version'
-    //testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
 }
 
 test {
